Fix for the arc-text overlap issue.

--- a/src/public/css/inTheLab.css
+++ b/src/public/css/inTheLab.css
@@ -96,4 +96,5 @@ path.arc {
 	fill: #fff;
 	font-weight: bold;
 	font-size: 12px;
+	z-index:50;
 }
